# robotic-arm

./: .gitignore  Cargo.toml  openocd.cfg  setup.sh
.cargo/: config
report/: References.bib  main.tex  makefile
src/: config.rs  main.rs  test_encoder.rs  test_hinge.rs  test_motor.rs
src/hinge/: mod.rs  motor.rs
src/hinge/motor/: driver.rs  encoder.rs  pwm.rs
src/hinge/motor/encoder/: interrupts.rs
