[package]
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "server"
version = "0.1.0"

[[bin]]
name = "test_hinge"
path = "src/test_hinge.rs"

[[bin]]
name = "test_motor"
path = "src/test_motor.rs"

[features]
default = [ "defmt-default" ]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-trace"] }
embassy-traits = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-trace", "52832"] }

defmt = "0.2"
defmt-rtt = "0.2"
panic-probe = { version = "0.2", features = ["print-defmt"] }

cortex-m = { version = "0.7.2", features = ["inline-asm"] }
cortex-m-rt = "0.6.13"
embedded-hal    = { version = "0.2.4", features = ["unproven"]}
nrf52832-hal = { version = "0.12", path = "../nrf-hal/nrf52832-hal" }
nrf52832-pac = { version = "0.9", git = "https://github.com/dskleingeld/nrf52832-pac.git" }
futures = { version = "0.3", default-features = false, features = ["async-await"] }

# pid-lite = { version = "1.1.0", default-features = false } # TODO re-enable when PR is merged
pid-lite = { git = "https://github.com/dskleingeld/pid-lite.git", version = "1.1.0", default-features = false }

[profile.release]
debug = true # default is `false`; using `true` is also OK
