[package]
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "server"
version = "0.1.0"

[[bin]]
name = "test_hinge"
path = "src/test_hinge.rs"

[[bin]]
name = "test_motor"
path = "src/test_motor.rs"

[[bin]]
name = "test_encoder"
path = "src/test_encoder.rs"

[features]
default = [ "defmt-default" ]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
embassy = { version = "0.1.0", git = "https://github.com/dskleingeld/embassy", features = ["defmt", "defmt-trace"] }
embassy-traits = { version = "0.1.0", git = "https://github.com/dskleingeld/embassy", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/dskleingeld/embassy", features = ["defmt", "defmt-trace", "nrf52832"] }

defmt = "0.2"
defmt-rtt = "0.2"
panic-probe = { version = "0.2", features = ["print-defmt"] }

cortex-m = { version = "0.7.2", features = ["inline-asm"] }
cortex-m-rt = "0.6.13"
embedded-hal    = { version = "0.2.4", features = ["unproven"]}
nrf52832-hal = { version = "0.12", git = "https://github.com/dskleingeld/nrf-hal.git" }
nrf52832-pac = { version = "0.9", git = "https://github.com/dskleingeld/nrf52832-pac.git" }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

pid-lite = { git = "https://github.com/dskleingeld/pid-lite.git", version = "1.1.0", default-features = false, features = ["defmt"] }
rotary-encoder-hal = { version = "0.3.0" , features = ["table-decoder"] }
ieee754 = { version = "0.2.6" }

[profile.release]
debug = true # default is `false`; using `true` is also OK
lto = "thin"
codegen-units = 1
# additionally native cpu instructions specified in .cargo/config.toml
